--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,10 @@
 {
   "env": {
-    "node": true,
-    "cypress/globals": true
+    "node": true
   },
   "globals": {
     "__DEV__": true
   },
   "extends": ["@depeng9527/eslint-config"],
-  "plugins": ["cypress"],
   "rules": {}
 }
