--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "lint:fix": "pnpm lint --fix"
   },
   "devDependencies": {
-    "@depeng9527/eslint-config": "^1.4.3",
+    "@antfu/eslint-config": "^0.26.1",
     "@types/jest": "^28.1.7",
     "@types/node": "^18.7.9",
     "@typescript-eslint/eslint-plugin": "^5.33.1",
