--- a/package.json
+++ b/package.json
@@ -13,51 +13,35 @@
   "bugs": {
     "url": "https://github.com/Depeng0929/[name]/issues"
   },
-  "keywords": [
-    "tools"
-  ],
-  "sideEffects": false,
-  "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.mjs"
-    }
-  },
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "*.d.ts"
-  ],
   "scripts": {
-    "clean": "rimraf -rf packages/*/node_modules",
-    "dev": "pnpm -r --filter ./packages --parallel run dev",
-    "build": "pnpm -r --filter ./packages run build",
-    "release": "zx scripts/release.mjs",
+    "clean": "rimraf -rf packages/*/node_modules && pnpm install",
+    "dev": "pnpm -r --filter=./packages/** --parallel run dev",
+    "build": "pnpm -r --filter=./packages/** run build",
+    "update:tag": "zx scripts/update-versions.mjs",
     "ci:publish": "zx scripts/publish.mjs",
+    "pc:dev": "pnpm -C packages/pc run dev",
     "test": "vitest test",
     "coverage": "vitest run --coverage",
     "lint": "eslint .",
     "lint:fix": "pnpm lint --fix"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.33.1",
-    "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.11",
-    "@typescript-eslint/eslint-plugin": "^5.46.0",
-    "bumpp": "^8.2.1",
+    "@antfu/eslint-config": "^0.38.0",
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "bumpp": "^9.1.0",
     "cross-env": "^7.0.3",
-    "eslint": "^8.29.0",
-    "eslint-plugin-jest": "^27.1.6",
-    "pnpm": "^7.18.1",
-    "rimraf": "^3.0.2",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
-    "vite": "^3.2.5",
-    "vite-plugin-windicss": "^1.8.8",
-    "vitest": "^0.25.6",
-    "zx": "^7.1.1"
+    "eslint": "^8.37.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "nodemon": "^2.0.22",
+    "pnpm": "^8.1.0",
+    "rimraf": "^4.4.1",
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.2",
+    "vite": "^4.2.1",
+    "vite-plugin-windicss": "^1.8.10",
+    "vitest": "^0.29.8",
+    "zx": "^7.2.1"
   }
 }
