--- a/turbo.json
+++ b/turbo.json
@@ -15,7 +15,7 @@
       "cache": false
     },
     "dev": {
-      "dependsOn": ["css-preset#stub"],
+      "dependsOn": ["config#stub"],
       "cache": false
     },
     "start": {
